<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Android系统字符串 -->
	<string name="abc_action_bar_home_description">转到主屏幕</string>
	<string name="abc_action_bar_up_description">转到上一层级</string>
	<string name="abc_action_menu_overflow_description">更多选项</string>
	<string name="abc_action_mode_done">完成</string>
	<string name="abc_activity_chooser_view_see_all">查看全部</string>
	<string name="abc_activitychooserview_choose_application">选择应用</string>
	<string name="abc_capital_off">关闭</string>
	<string name="abc_capital_on">开启</string>
	<string name="abc_menu_alt_shortcut_label">Alt+</string>
	<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
	<string name="abc_menu_delete_shortcut_label">Delete 键</string>
	<string name="abc_menu_enter_shortcut_label">Enter 键</string>
	<string name="abc_menu_function_shortcut_label">Fn+</string>
	<string name="abc_menu_meta_shortcut_label">Meta+</string>
	<string name="abc_menu_shift_shortcut_label">Shift+</string>
	<string name="abc_menu_space_shortcut_label">空格键</string>
	<string name="abc_menu_sym_shortcut_label">Sym+</string>
	<string name="abc_prepend_shortcut_label">Menu+</string>
	<string name="abc_search_hint">搜索…</string>
	<string name="abc_searchview_description_clear">清除查询</string>
	<string name="abc_searchview_description_query">搜索查询</string>
	<string name="abc_searchview_description_search">搜索</string>
	<string name="abc_searchview_description_submit">提交查询</string>
	<string name="abc_searchview_description_voice">语音搜索</string>
	<string name="abc_shareactionprovider_share_with">分享方式</string>
	<string name="abc_shareactionprovider_share_with_application">使用%s分享</string>
	<string name="abc_toolbar_collapse_description">收起</string>
	<string name="search_menu_title">搜索</string>
	<string name="status_bar_notification_info_overflow">999+</string>
	<string name="app_name">NetFeige2</string>
	<string name="sharename">分享</string>
	<string name="about">关于</string>
	<string name="version_code_colon">版本号：</string>
	<string name="check_update">检查更新</string>
	<string name="wt">无线传输</string>
	<string name="createwifiap">创建WiFi热点</string>
	<string name="filer_img">图片</string>
	<string name="filer_audio">音频</string>
	<string name="filer_video">视频</string>
	<string name="filer_document">文档</string>
	<string name="filer_apk">应用</string>
	<string name="filer_feige">飞鸽文件</string>
	<string name="filer_memory">内部存储</string>
	<string name="filer_sdcard">SD卡</string>
	<string name="send">发送</string>
	<string name="choiceremoteplayer">选择远程播放器</string>
	<string name="search">搜索</string>
	<string name="choiceuser">选择用户</string>
	<string name="delete_msg_history_prompt">删除消息历史提示</string>
	<string name="delete_msg_history_content">确定要删除消息历史吗？</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="background">后台运行</string>
	<string name="is_deletefile_notify">删除文件通知</string>
	<string name="nextnotnotify">不再提示</string>
	<string name="detail">详情</string>
	<string name="detail_name">名称：</string>
	<string name="detail_size">大小：</string>
	<string name="detail_authority">权限：</string>
	<string name="detail_time">时间：</string>
	<string name="detail_path">路径：</string>
	<string name="dir">目录</string>
	<string name="show_text">显示文本</string>
	<string name="delete">删除</string>
	<string name="copy">复制</string>
	<string name="cut">剪切</string>
	<string name="rename">重命名</string>
	<string name="open">打开</string>
	<string name="receive">接收</string>
	<string name="refuse">拒绝</string>
	<string name="refresh">刷新</string>
	<string name="connect">连接</string>
	<string name="disconnect">断开</string>
	<string name="share">分享</string>
	<string name="addshare">添加分享</string>
	<string name="cancelshare">取消分享</string>
	<string name="resend">重新发送</string>
	<string name="sort">排序</string>
	<string name="sort_asc">升序</string>
	<string name="sort_des">降序</string>
	<string name="sort_name">按名称</string>
	<string name="sort_time">按时间</string>
	<string name="notify">通知</string>
	<string name="notify2">通知2</string>
	<string name="notification_prompt">通知提示</string>
	<string name="prompt_audio">音频提示</string>
	<string name="removenotify1">移除通知1</string>
	<string name="removenotify2">移除通知2</string>
	<string name="noprinternotify">无打印机通知</string>
	<string name="no_preview_file_notify">无法预览此文件</string>
	<string name="delete_file_prompt">删除文件提示</string>
	<string name="update_prompt">更新提示</string>
	<string name="use_wt">使用无线传输</string>
	<string name="creatingwifiap">正在创建WiFi热点</string>
	<string name="createfailwifiap">创建WiFi热点失败</string>
	<string name="searchingwifiap">正在搜索WiFi热点</string>
	<string name="searchfailwifiap">搜索WiFi热点失败</string>
	<string name="linkedwifiap">已连接的WiFi热点</string>
	<string name="inwifinotify">进入WiFi通知</string>
	<string name="exitwifinotify">退出WiFi通知</string>
	<string name="close_wifi_prompt">关闭WiFi提示</string>
	<string name="no_wifi_prompt_pre">无WiFi提示前缀</string>
	<string name="no_wifi_prompt_middle">无WiFi提示中间</string>
	<string name="setup_wifi">设置WiFi</string>
	<string name="current_network">当前网络</string>
	<string name="current_netsector">当前网段</string>
	<string name="add_net_sectors">添加网段</string>
	<string name="add_net_sectors_prompt">添加网段提示</string>
	<string name="wifiappassword">WiFi密码</string>
	<string name="folder_name">文件夹名称</string>
	<string name="writefoldername">写入文件夹名称</string>
	<string name="backroot">返回根目录</string>
	<string name="loadpath">加载路径</string>
	<string name="feige_dir_size">飞鸽目录大小</string>
	<string name="friend">好友</string>
	<string name="group">群组</string>
	<string name="input_name">输入名称</string>
	<string name="name">名称</string>
	<string name="remoteplayername">远程播放器名称</string>
	<string name="remoteplayerexplain">远程播放器说明</string>
	<string name="dlnaplayer">DLNA播放器</string>
	<string name="dlnaplayer2">DLNA播放器2</string>
	<string name="dlnaplayerservice">DLNA播放服务</string>
	<string name="houplay">后续播放</string>
	<string name="startscreeninteraction">开始屏幕交互</string>
	<string name="choiceprinter">选择打印机</string>
	<string name="printer">打印机</string>
	<string name="printer2">打印机2</string>
	<string name="print">打印</string>
	<string name="printnumber">打印数量</string>
	<string name="printsetup">打印设置</string>
	<string name="discusssetup">讨论组设置</string>
	<string name="input_group">输入群组</string>
	<string name="exitdiscuss">退出讨论组</string>
	<string name="movefeige">移动飞鸽</string>
	<string name="removefeige">移除飞鸽</string>
	<string name="choicefeigepostion">选择飞鸽位置</string>
	<string name="myshare">我的分享</string>
	<string name="lanshare">局域网分享</string>
	<string name="sharearea">分享区域</string>
	<string name="sharepwd">分享密码</string>
	<string name="setup">设置</string>
	<string name="gerenal_setup">常规设置</string>
	<string name="download_setup">下载设置</string>
	<string name="auto_recv_file">自动接收文件</string>
	<string name="auto_check_update">自动检查更新</string>
	<string name="edithead">编辑头像</string>
	<string name="home">主页</string>
	<string name="ip_addr">IP地址</string>
	<string name="ip_addr_colon">IP地址：</string>
	<string name="mac_addr">MAC地址</string>
	<string name="port">端口</string>
	<string name="input_port">输入端口</string>
	<string name="phonememory">手机内存</string>
	<string name="allshow">全部显示</string>
	<string name="conreceive">连续接收</string>
	<string name="samename">同名文件</string>
	<string name="samenamenotify">同名文件通知</string>
	<string name="separate">分隔</string>
	<string name="new_build">新版本</string>
	<string name="init_time">初始化时间</string>
	<string name="exit_file_trans_prompt">退出文件传输提示</string>
	<string name="two_dimensional">二维码</string>
	<string name="two_dimensional_text">二维码文本</string>
	<string name="welcome">欢迎使用</string>
	<string name="help_explain">帮助说明</string>
	<string name="send_audio">发送音频</string>
	<string name="advice_feedback">建议反馈</string>
	<string name="title_feedback">反馈标题</string>
</resources>
