<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:background="@drawable/popupsend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <HorizontalScrollView
        android:id="@+id/horizontalScrollView_popup"
        android:paddingRight="20dp"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp">
                <Button
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/btn_send"
                    android:background="@drawable/x_popupsend"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send"/>
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="top|right"
                    android:id="@+id/textv_number"
                    android:background="@drawable/sendnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="0dp"/>
            </FrameLayout>
            <Button
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_showto"
                android:background="@drawable/x_popupsend"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/startscreeninteraction"/>
            <Button
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_print"
                android:background="@drawable/x_popupsend"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/print"/>
            <Button
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_share"
                android:background="@drawable/x_popupbtn"
                android:layout_width="60dp"
                android:layout_height="33dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/share"/>
            <Button
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_copy"
                android:background="@drawable/x_popupbtn"
                android:layout_width="60dp"
                android:layout_height="33dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/copy"/>
            <Button
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_cut"
                android:background="@drawable/x_popupbtn"
                android:layout_width="60dp"
                android:layout_height="33dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/cut"/>
            <Button
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_delete"
                android:background="@drawable/x_popupbtn"
                android:layout_width="60dp"
                android:layout_height="33dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/delete"/>
            <Button
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_rename"
                android:background="@drawable/x_popupbtn"
                android:layout_width="60dp"
                android:layout_height="33dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/rename"/>
            <Button
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_detail"
                android:background="@drawable/x_popupbtn"
                android:layout_width="60dp"
                android:layout_height="33dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/detail"/>
            <Button
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_cancel"
                android:background="@drawable/x_popupbtn"
                android:layout_width="60dp"
                android:layout_height="33dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:text="@string/cancel"/>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
