<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/movedialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/removefeige"/>
        <CheckBox
            android:textColor="@color/black"
            android:id="@+id/checkbox_movefegei"
            android:paddingLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="16dp"
            android:text="@string/movefeige"
            style="@style/mycheckbox"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp">
        <Button
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:id="@+id/btn_backgroundcopy"
            android:background="@drawable/x_confirm_update_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:text="@string/confirm"/>
        <Button
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:id="@+id/btn_copycancel"
            android:background="@drawable/x_confirm_update_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>
