<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/detaildialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">
        <TextView
            android:id="@+id/tvname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_name"/>
        <TextView
            android:id="@+id/tvshowname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">
        <TextView
            android:id="@+id/tvsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_size"/>
        <TextView
            android:id="@+id/tvshowsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">
        <TextView
            android:id="@+id/tvauthority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_authority"/>
        <TextView
            android:id="@+id/tvshowauthority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">
        <TextView
            android:id="@+id/tvtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_time"/>
        <TextView
            android:id="@+id/tvshowtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">
        <TextView
            android:id="@+id/tvpath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_path"/>
        <TextView
            android:id="@+id/tvshowpath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
