<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/basicpopup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="left"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/exclamatorymark"/>
        <TextView
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/samename"/>
    </LinearLayout>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/samenamenotify"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="23dp">
        <Button
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:id="@+id/btn_deleteconfirm"
            android:background="@drawable/x_confirm_update_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:text="@string/confirm"/>
        <Button
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:id="@+id/btn_deletecancel"
            android:background="@drawable/x_cancel_update_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>
