<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/popupnotify"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/is_deletefile_notify"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="23dp">
        <Button
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:id="@+id/btn_deleteconfirm"
            android:background="@drawable/x_confirm_update_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:text="@string/confirm"/>
        <Button
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:id="@+id/btn_deletecancel"
            android:background="@drawable/x_cancel_update_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>
