<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/basicpopup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_gravity="left"
        android:id="@+id/title_text_setmysharepwddialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sharepwd"/>
    <EditText
        android:id="@+id/pwd_edit_setmysharepwddialog"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:password="true">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="13dp">
        <Button
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:id="@+id/confirm_btn_setmysharepwddialog"
            android:background="@drawable/x_confirm_update_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:text="@string/confirm"/>
        <Button
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:id="@+id/cancel_btn_setmysharepwddialog"
            android:background="@drawable/x_cancel_update_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>
