<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/basicpopup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="left"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/exclamatorymark"/>
        <TextView
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/detail"/>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_name"/>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tvshowname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/linear_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:id="@+id/tvsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_size"/>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tvshowsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:id="@+id/tvauthority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_authority"/>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tvshowauthority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:id="@+id/tvtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_time"/>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tvshowtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp">
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:id="@+id/tvpath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_path"/>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/black"
                android:id="@+id/tvshowpath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="13dp">
        <Button
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:id="@+id/btn_deleteconfirm"
            android:background="@drawable/x_confirm_update_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:text="@string/confirm"/>
    </LinearLayout>
</LinearLayout>
