<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/top_navigation_layout_option"
        android:background="@drawable/bg_top_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <Button
            android:id="@+id/back_btn_feedback"
            android:background="@drawable/x_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/advice_feedback"
            android:layout_weight="1"
            style="@style/textview_large"/>
        <Button
            android:textSize="16sp"
            android:textColor="@color/white"
            android:id="@+id/send_feedback"
            android:background="@drawable/x_file_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:text="@string/send"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/content_margin">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/title_feedback"/>
        <EditText
            android:gravity="top"
            android:id="@+id/content_edit_feedback"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="12dp"
            android:inputType="textMultiLine"/>
    </LinearLayout>
</LinearLayout>
